# oc_lab_5

./: CMakeLists.txt  README.md
doc/: 5-7.odt
src/: calc_node.cpp  control_node.cpp  my_zmq.h  nnode.cpp
